tests/exact_empty_objects/exact_empty_objects.exp
Error ----------------------------------------------------------------------------------------------- defaulting.js:10:3

Cannot cast `a` to boolean literal `true` because number [1] is incompatible with boolean literal `true` [2].
[incompatible-type]

   defaulting.js:10:3
   10|   a as true; // ERROR
         ^

References:
   defaulting.js:1:24
    1| declare var o: ?{prop: number};
                              ^^^^^^ [1]
   defaulting.js:10:8
   10|   a as true; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:10:3

Cannot cast `a` to boolean literal `true` because `void` (due to access of non-existent property `prop`) [1] is
incompatible with boolean literal `true` [2]. [incompatible-type]

   defaulting.js:10:3
   10|   a as true; // ERROR
         ^

References:
   defaulting.js:7:13
    7|   const a = x.prop;
                   ^^^^^^ [1]
   defaulting.js:10:8
   10|   a as true; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:11:3

Cannot cast `a` to number because `void` (due to access of non-existent property `prop`) [1] is incompatible with
number [2]. [incompatible-type]

   defaulting.js:11:3
   11|   a as number; // ERROR
         ^

References:
   defaulting.js:7:13
    7|   const a = x.prop;
                   ^^^^^^ [1]
   defaulting.js:11:8
   11|   a as number; // ERROR
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:12:3

Cannot cast `a` to undefined because number [1] is incompatible with undefined [2]. [incompatible-type]

   defaulting.js:12:3
   12|   a as void; // ERROR
         ^

References:
   defaulting.js:1:24
    1| declare var o: ?{prop: number};
                              ^^^^^^ [1]
   defaulting.js:12:8
   12|   a as void; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:13:6

Cannot get `x.XXX` because property `XXX` is missing in object literal [1]. [prop-missing]

   defaulting.js:13:6
   13|   (x.XXX); // ERROR
            ^^^

References:
   defaulting.js:5:18
    5|   const x = o ?? {};
                        ^^ [1]


Error ----------------------------------------------------------------------------------------------- defaulting.js:18:3

Cannot cast `prop` to number because `void` (due to access of non-existent property `prop`) [1] is incompatible with
number [2]. [incompatible-type]

   defaulting.js:18:3
   18|   prop as number; // ERROR
         ^^^^

References:
   defaulting.js:16:10
   16|   const {prop} = x;
                ^^^^ [1]
   defaulting.js:18:11
   18|   prop as number; // ERROR
                 ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:28:3

Cannot cast `a` to boolean literal `true` because number [1] is incompatible with boolean literal `true` [2].
[incompatible-type]

   defaulting.js:28:3
   28|   a as true; // ERROR
         ^

References:
   defaulting.js:1:24
    1| declare var o: ?{prop: number};
                              ^^^^^^ [1]
   defaulting.js:28:8
   28|   a as true; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:28:3

Cannot cast `a` to boolean literal `true` because `void` (due to access of non-existent property `prop`) [1] is
incompatible with boolean literal `true` [2]. [incompatible-type]

   defaulting.js:28:3
   28|   a as true; // ERROR
         ^

References:
   defaulting.js:25:13
   25|   const a = x.prop;
                   ^^^^^^ [1]
   defaulting.js:28:8
   28|   a as true; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:29:3

Cannot cast `a` to number because `void` (due to access of non-existent property `prop`) [1] is incompatible with
number [2]. [incompatible-type]

   defaulting.js:29:3
   29|   a as number; // ERROR
         ^

References:
   defaulting.js:25:13
   25|   const a = x.prop;
                   ^^^^^^ [1]
   defaulting.js:29:8
   29|   a as number; // ERROR
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:30:3

Cannot cast `a` to undefined because number [1] is incompatible with undefined [2]. [incompatible-type]

   defaulting.js:30:3
   30|   a as void; // ERROR
         ^

References:
   defaulting.js:1:24
    1| declare var o: ?{prop: number};
                              ^^^^^^ [1]
   defaulting.js:30:8
   30|   a as void; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:31:6

Cannot get `x.XXX` because property `XXX` is missing in object literal [1]. [prop-missing]

   defaulting.js:31:6
   31|   (x.XXX); // ERROR
            ^^^

References:
   defaulting.js:23:18
   23|   const x = o || {};
                        ^^ [1]


Error ----------------------------------------------------------------------------------------------- defaulting.js:36:3

Cannot cast `prop` to number because `void` (due to access of non-existent property `prop`) [1] is incompatible with
number [2]. [incompatible-type]

   defaulting.js:36:3
   36|   prop as number; // ERROR
         ^^^^

References:
   defaulting.js:34:10
   34|   const {prop} = x;
                ^^^^ [1]
   defaulting.js:36:11
   36|   prop as number; // ERROR
                 ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:46:3

Cannot cast `a` to boolean literal `true` because number [1] is incompatible with boolean literal `true` [2].
[incompatible-type]

   defaulting.js:46:3
   46|   a as true; // ERROR
         ^

References:
   defaulting.js:1:24
    1| declare var o: ?{prop: number};
                              ^^^^^^ [1]
   defaulting.js:46:8
   46|   a as true; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:46:3

Cannot cast `a` to boolean literal `true` because `void` (due to access of non-existent property `prop`) [1] is
incompatible with boolean literal `true` [2]. [incompatible-type]

   defaulting.js:46:3
   46|   a as true; // ERROR
         ^

References:
   defaulting.js:43:13
   43|   const a = x.prop;
                   ^^^^^^ [1]
   defaulting.js:46:8
   46|   a as true; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:47:3

Cannot cast `a` to number because `void` (due to access of non-existent property `prop`) [1] is incompatible with
number [2]. [incompatible-type]

   defaulting.js:47:3
   47|   a as number; // ERROR
         ^

References:
   defaulting.js:43:13
   43|   const a = x.prop;
                   ^^^^^^ [1]
   defaulting.js:47:8
   47|   a as number; // ERROR
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:48:3

Cannot cast `a` to undefined because number [1] is incompatible with undefined [2]. [incompatible-type]

   defaulting.js:48:3
   48|   a as void; // ERROR
         ^

References:
   defaulting.js:1:24
    1| declare var o: ?{prop: number};
                              ^^^^^^ [1]
   defaulting.js:48:8
   48|   a as void; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:49:6

Cannot get `x.XXX` because property `XXX` is missing in object type [1]. [prop-missing]

   defaulting.js:49:6
   49|   (x.XXX); // ERROR
            ^^^

References:
   defaulting.js:1:17
    1| declare var o: ?{prop: number};
                       ^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- defaulting.js:54:3

Cannot cast `prop` to number because `void` (due to access of non-existent property `prop`) [1] is incompatible with
number [2]. [incompatible-type]

   defaulting.js:54:3
   54|   prop as number; // ERROR
         ^^^^

References:
   defaulting.js:52:10
   52|   const {prop} = x;
                ^^^^ [1]
   defaulting.js:54:11
   54|   prop as number; // ERROR
                 ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:70:3

Cannot cast `a` to boolean literal `true` because number [1] is incompatible with boolean literal `true` [2].
[incompatible-type]

   defaulting.js:70:3
   70|   a as true; // ERROR
         ^

References:
   defaulting.js:59:9
   59|   prop: number,
               ^^^^^^ [1]
   defaulting.js:70:8
   70|   a as true; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:70:3

Cannot cast `a` to boolean literal `true` because `void` (due to access of non-existent property `prop`) [1] is
incompatible with boolean literal `true` [2]. [incompatible-type]

   defaulting.js:70:3
   70|   a as true; // ERROR
         ^

References:
   defaulting.js:67:13
   67|   const a = x.prop;
                   ^^^^^^ [1]
   defaulting.js:70:8
   70|   a as true; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:71:3

Cannot cast `a` to number because `void` (due to access of non-existent property `prop`) [1] is incompatible with
number [2]. [incompatible-type]

   defaulting.js:71:3
   71|   a as number; // ERROR
         ^

References:
   defaulting.js:67:13
   67|   const a = x.prop;
                   ^^^^^^ [1]
   defaulting.js:71:8
   71|   a as number; // ERROR
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:72:3

Cannot cast `a` to undefined because number [1] is incompatible with undefined [2]. [incompatible-type]

   defaulting.js:72:3
   72|   a as void; // ERROR
         ^

References:
   defaulting.js:59:9
   59|   prop: number,
               ^^^^^^ [1]
   defaulting.js:72:8
   72|   a as void; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:73:6

Cannot get `x.XXX` because property `XXX` is missing in object type [1]. [prop-missing]

   defaulting.js:73:6
   73|   (x.XXX); // ERROR
            ^^^

References:
   defaulting.js:58:17
                       v
   58| declare var n: ?{
   59|   prop: number,
   60|   ...
   61| };
       ^ [1]


Error ----------------------------------------------------------------------------------------------- defaulting.js:73:6

Cannot get `x.XXX` because property `XXX` is missing in object literal [1]. [prop-missing]

   defaulting.js:73:6
   73|   (x.XXX); // ERROR
            ^^^

References:
   defaulting.js:65:18
   65|   const x = n ?? {};
                        ^^ [1]


Error ----------------------------------------------------------------------------------------------- defaulting.js:78:3

Cannot cast `prop` to number because `void` (due to access of non-existent property `prop`) [1] is incompatible with
number [2]. [incompatible-type]

   defaulting.js:78:3
   78|   prop as number; // ERROR
         ^^^^

References:
   defaulting.js:76:10
   76|   const {prop} = x;
                ^^^^ [1]
   defaulting.js:78:11
   78|   prop as number; // ERROR
                 ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:94:3

Cannot cast `a` to boolean literal `true` because number [1] is incompatible with boolean literal `true` [2].
[incompatible-type]

   defaulting.js:94:3
   94|   a as true; // ERROR
         ^

References:
   defaulting.js:83:9
   83|   prop: number;
               ^^^^^^ [1]
   defaulting.js:94:8
   94|   a as true; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:94:3

Cannot cast `a` to boolean literal `true` because `void` (due to access of non-existent property `prop`) [1] is
incompatible with boolean literal `true` [2]. [incompatible-type]

   defaulting.js:94:3
   94|   a as true; // ERROR
         ^

References:
   defaulting.js:91:13
   91|   const a = x.prop;
                   ^^^^^^ [1]
   defaulting.js:94:8
   94|   a as true; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:95:3

Cannot cast `a` to number because `void` (due to access of non-existent property `prop`) [1] is incompatible with
number [2]. [incompatible-type]

   defaulting.js:95:3
   95|   a as number; // ERROR
         ^

References:
   defaulting.js:91:13
   91|   const a = x.prop;
                   ^^^^^^ [1]
   defaulting.js:95:8
   95|   a as number; // ERROR
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:96:3

Cannot cast `a` to undefined because number [1] is incompatible with undefined [2]. [incompatible-type]

   defaulting.js:96:3
   96|   a as void; // ERROR
         ^

References:
   defaulting.js:83:9
   83|   prop: number;
               ^^^^^^ [1]
   defaulting.js:96:8
   96|   a as void; // ERROR
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- defaulting.js:97:6

Cannot get `x.XXX` because property `XXX` is missing in `C` [1]. [prop-missing]

   defaulting.js:97:6
   97|   (x.XXX); // ERROR
            ^^^

References:
   defaulting.js:85:17
   85| declare var c: ?C;
                       ^ [1]


Error ----------------------------------------------------------------------------------------------- defaulting.js:97:6

Cannot get `x.XXX` because property `XXX` is missing in object literal [1]. [prop-missing]

   defaulting.js:97:6
   97|   (x.XXX); // ERROR
            ^^^

References:
   defaulting.js:89:18
   89|   const x = c ?? {};
                        ^^ [1]


Error ---------------------------------------------------------------------------------------------- defaulting.js:102:3

Cannot cast `prop` to number because `void` (due to access of non-existent property `prop`) [1] is incompatible with
number [2]. [incompatible-type]

   defaulting.js:102:3
   102|   prop as number; // ERROR
          ^^^^

References:
   defaulting.js:100:10
   100|   const {prop} = x;
                 ^^^^ [1]
   defaulting.js:102:11
   102|   prop as number; // ERROR
                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast object literal to object type because property `a` is missing in object literal [1] but exists in object
type [2]. [incompatible-type]

   test.js:4:2
   4| ({} as {a: number}); // ERROR
       ^^ [1]

References:
   test.js:4:8
   4| ({} as {a: number}); // ERROR
             ^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:5:2

Cannot cast object literal to object type because property `a` is missing in object literal [1] but exists in object
type [2]. [incompatible-type]

   test.js:5:2
   5| ({} as {a: number, ...}); // ERROR
       ^^ [1]

References:
   test.js:5:8
   5| ({} as {a: number, ...}); // ERROR
             ^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:8:2

Cannot cast object literal to object type because property `a` is missing in object literal [1] but exists in object
type [2]. [incompatible-type]

   test.js:8:2
   8| ({} as {a: void}); // ERROR
       ^^ [1]

References:
   test.js:8:8
   8| ({} as {a: void}); // ERROR
             ^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:11:5

Cannot get `err.xxx` because property `xxx` is missing in object literal [1]. [prop-missing]

   test.js:11:5
   11| err.xxx; // ERROR
           ^^^

References:
   test.js:10:13
   10| const err = {};
                   ^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:12:9

Cannot get `err.xxx` because property `xxx` is missing in object literal [1]. [prop-missing]

   test.js:12:9
   12| if (err.xxx) {} // ERROR
               ^^^

References:
   test.js:10:13
   10| const err = {};
                   ^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:13:5

Cannot call `err.m` because property `m` is missing in object literal [1]. [prop-missing]

   test.js:13:5
   13| err.m(); // ERROR
           ^

References:
   test.js:10:13
   10| const err = {};
                   ^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:14:5

Cannot assign `1` to `err.a` because property `a` is missing in object literal [1]. [prop-missing]

   test.js:14:5
   14| err.a = 1; // ERROR
           ^

References:
   test.js:10:13
   10| const err = {};
                   ^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:15:5

Cannot assign `1` to `err['a']` because property `a` is missing in object literal [1]. [prop-missing]

   test.js:15:5
   15| err['a'] = 1; // ERROR
           ^^^

References:
   test.js:10:13
   10| const err = {};
                   ^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:16:12

Cannot assign `1` to `err['a']` because an index signature declaring the expected key / value type is missing in object
literal [1]. [prop-missing]

   test.js:16:12
   16| err['a' as string] = 1; // ERROR
                  ^^^^^^

References:
   test.js:10:13
   10| const err = {};
                   ^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:19:40

Cannot assign object literal to `spread` because property `b` is missing in object literal [1] but exists in object
type [2]. [incompatible-type]

   test.js:19:40
   19| const spread: {a: number, b: string} = {a: 1, ...{}}; // ERROR
                                              ^^^^^^^^^^^^^ [1]

References:
   test.js:19:15
   19| const spread: {a: number, b: string} = {a: 1, ...{}}; // ERROR
                     ^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:22:3

Cannot call `f` with object literal bound to `a` because property `a` is missing in object literal [1] but exists in
object type [2]. [incompatible-type]

   test.js:22:3
   22| f({}); // ERROR
         ^^ [1]

References:
   test.js:21:23
   21| declare function f(a: {a: void}): void;
                             ^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:35:3

Cannot cast `a` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   test.js:35:3
   35|   a as empty; // ERROR
         ^

References:
   test.js:31:49
   31| function paramDefaultDestructuring({a, b}: {a?: string, b?: number} = {}) {
                                                       ^^^^^^ [1]
   test.js:35:8
   35|   a as empty; // ERROR
              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:35:3

Cannot cast `a` to empty because undefined [1] is incompatible with empty [2]. [incompatible-type]

   test.js:35:3
   35|   a as empty; // ERROR
         ^

References:
   test.js:31:49
   31| function paramDefaultDestructuring({a, b}: {a?: string, b?: number} = {}) {
                                                       ^^^^^^ [1]
   test.js:35:8
   35|   a as empty; // ERROR
              ^^^^^ [2]



Found 45 errors
